main styling and normalhours/temporaryhours toggle

--- a/src/blocks/editor.scss
+++ b/src/blocks/editor.scss
@@ -4,6 +4,7 @@
  * Replace them with your own styles or remove the file completely.
  */
 
-.wp-block-create-block-blockboilerplate {
+.wp-block-flexible-open-hours-openhours {
 	border: 1px dotted #f00;
+	padding: 1rem;
 }
