--- a/src/blocks/style.scss
+++ b/src/blocks/style.scss
@@ -6,7 +6,13 @@
  */
 
 .wp-block-flexible-open-hours-openhours {
-	background-color: #21759b;
-	color: #fff;
-	padding: 2px;
+	ul {
+		padding: 0;
+	}
+	li {
+		display: inline;
+	}
+	.foh-display__dates {
+		font-weight: bold;
+	}
 }
