--- a/src/blocks/style.scss
+++ b/src/blocks/style.scss
@@ -17,6 +17,8 @@
 	}
 	.foh-display__button {
 		padding: 0;
+		margin-bottom: var(--wp--custom--gapo--m);
+		text-align: left;
 		border: none;
 		background-color: transparent;
 		opacity: 0.7; // change to selected color in future
